parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    THEN
    ELIF
    RETURN
    GLOBAL
    ASSERT
    WHILE
    DEL
    RAISE
    FOR
    EXCEPT
    DEF
    IMPORT
    EXEC
    CLASS
    HEX
    ELSE
    TRY
    FINALLY
    PASS
    FROM
    BREAK
    CONTINUE
    LAMBDA

Grammar

Rule 0     S' -> sentencia
Rule 1     sentencia -> IDENTIFICADOR IGUAL expresion
Rule 2     sentencia -> expresion
Rule 3     sentencia -> if_stc
Rule 4     sentencia -> expresionRelacional
Rule 5     sentencia -> expresionLogica
Rule 6     sentencia -> print_stc
Rule 7     sentencia -> expresionGrupo
Rule 8     expresionLogica -> PARENIZQ expresiones OR expresiones PARENDER
Rule 9     expresionLogica -> PARENIZQ expresiones AND expresiones PARENDER
Rule 10    expresionLogica -> NOT PARENIZQ expresiones PARENDER
Rule 11    expresiones -> expresionRelacional
Rule 12    expresiones -> expresion
Rule 13    expresionRelacional -> expresion MAYORQUE terminal
Rule 14    expresionRelacional -> expresion MENORQUE terminal
Rule 15    expresionRelacional -> expresion MAYORIGUALQUE terminal
Rule 16    expresionRelacional -> expresion MENORIGUALQUE terminal
Rule 17    expresionRelacional -> expresion IN terminal
Rule 18    expresionRelacional -> expresion NOTIN terminal
Rule 19    expresionRelacional -> expresion IS terminal
Rule 20    expresionRelacional -> expresion ISNOT terminal
Rule 21    expresionRelacional -> expresion DIFERENTE terminal
Rule 22    expresionRelacional -> expresion DISTINTO terminal
Rule 23    expresionRelacional -> expresion IGUAL terminal
Rule 24    expresionRelacional -> expresion IGUALA terminal
Rule 25    expresion -> expresion SUMA terminal
Rule 26    expresion -> expresion RESTA terminal
Rule 27    expresion -> expresion MULTIPLICACION terminal
Rule 28    expresion -> expresion DIVISION terminal
Rule 29    expresionGrupo -> PARENIZQ expresion PARENDER
Rule 30    test -> PARENIZQ expresionRelacional PARENDER
Rule 31    if_stc -> IF test PUNTOS
Rule 32    print_stc -> PRINT PARENIZQ STRING PARENDER
Rule 33    expresion -> terminal
Rule 34    terminal -> NUMERO
Rule 35    terminal -> IDENTIFICADOR

Terminals, with rules where they appear

AND                  : 9
ASSERT               : 
BREAK                : 
CLASS                : 
CONTINUE             : 
DEF                  : 
DEL                  : 
DIFERENTE            : 21
DISTINTO             : 22
DIVISION             : 28
ELIF                 : 
ELSE                 : 
EXCEPT               : 
EXEC                 : 
FINALLY              : 
FOR                  : 
FROM                 : 
GLOBAL               : 
HEX                  : 
IDENTIFICADOR        : 1 35
IF                   : 31
IGUAL                : 1 23
IGUALA               : 24
IMPORT               : 
IN                   : 17
IS                   : 19
ISNOT                : 20
LAMBDA               : 
MAYORIGUALQUE        : 15
MAYORQUE             : 13
MENORIGUALQUE        : 16
MENORQUE             : 14
MULTIPLICACION       : 27
NOT                  : 10
NOTIN                : 18
NUMERO               : 34
OR                   : 8
PARENDER             : 8 9 10 29 30 32
PARENIZQ             : 8 9 10 29 30 32
PASS                 : 
PRINT                : 32
PUNTOS               : 31
RAISE                : 
RESTA                : 26
RETURN               : 
STRING               : 32
SUMA                 : 25
THEN                 : 
TRY                  : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

expresion            : 1 2 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
expresionGrupo       : 7
expresionLogica      : 5
expresionRelacional  : 4 11 30
expresiones          : 8 8 9 9 10
if_stc               : 3
print_stc            : 6
sentencia            : 0
terminal             : 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 33
test                 : 31

Parsing method: LALR

state 0

    (0) S' -> . sentencia
    (1) sentencia -> . IDENTIFICADOR IGUAL expresion
    (2) sentencia -> . expresion
    (3) sentencia -> . if_stc
    (4) sentencia -> . expresionRelacional
    (5) sentencia -> . expresionLogica
    (6) sentencia -> . print_stc
    (7) sentencia -> . expresionGrupo
    (25) expresion -> . expresion SUMA terminal
    (26) expresion -> . expresion RESTA terminal
    (27) expresion -> . expresion MULTIPLICACION terminal
    (28) expresion -> . expresion DIVISION terminal
    (33) expresion -> . terminal
    (31) if_stc -> . IF test PUNTOS
    (13) expresionRelacional -> . expresion MAYORQUE terminal
    (14) expresionRelacional -> . expresion MENORQUE terminal
    (15) expresionRelacional -> . expresion MAYORIGUALQUE terminal
    (16) expresionRelacional -> . expresion MENORIGUALQUE terminal
    (17) expresionRelacional -> . expresion IN terminal
    (18) expresionRelacional -> . expresion NOTIN terminal
    (19) expresionRelacional -> . expresion IS terminal
    (20) expresionRelacional -> . expresion ISNOT terminal
    (21) expresionRelacional -> . expresion DIFERENTE terminal
    (22) expresionRelacional -> . expresion DISTINTO terminal
    (23) expresionRelacional -> . expresion IGUAL terminal
    (24) expresionRelacional -> . expresion IGUALA terminal
    (8) expresionLogica -> . PARENIZQ expresiones OR expresiones PARENDER
    (9) expresionLogica -> . PARENIZQ expresiones AND expresiones PARENDER
    (10) expresionLogica -> . NOT PARENIZQ expresiones PARENDER
    (32) print_stc -> . PRINT PARENIZQ STRING PARENDER
    (29) expresionGrupo -> . PARENIZQ expresion PARENDER
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 9
    IF              shift and go to state 11
    PARENIZQ        shift and go to state 8
    NOT             shift and go to state 14
    PRINT           shift and go to state 4
    NUMERO          shift and go to state 10

    expresion                      shift and go to state 12
    sentencia                      shift and go to state 5
    expresionLogica                shift and go to state 1
    expresionRelacional            shift and go to state 2
    expresionGrupo                 shift and go to state 13
    terminal                       shift and go to state 6
    print_stc                      shift and go to state 3
    if_stc                         shift and go to state 7

state 1

    (5) sentencia -> expresionLogica .

    $end            reduce using rule 5 (sentencia -> expresionLogica .)


state 2

    (4) sentencia -> expresionRelacional .

    $end            reduce using rule 4 (sentencia -> expresionRelacional .)


state 3

    (6) sentencia -> print_stc .

    $end            reduce using rule 6 (sentencia -> print_stc .)


state 4

    (32) print_stc -> PRINT . PARENIZQ STRING PARENDER

    PARENIZQ        shift and go to state 15


state 5

    (0) S' -> sentencia .



state 6

    (33) expresion -> terminal .

    SUMA            reduce using rule 33 (expresion -> terminal .)
    RESTA           reduce using rule 33 (expresion -> terminal .)
    MULTIPLICACION  reduce using rule 33 (expresion -> terminal .)
    DIVISION        reduce using rule 33 (expresion -> terminal .)
    $end            reduce using rule 33 (expresion -> terminal .)
    MAYORQUE        reduce using rule 33 (expresion -> terminal .)
    MENORQUE        reduce using rule 33 (expresion -> terminal .)
    MAYORIGUALQUE   reduce using rule 33 (expresion -> terminal .)
    MENORIGUALQUE   reduce using rule 33 (expresion -> terminal .)
    IN              reduce using rule 33 (expresion -> terminal .)
    NOTIN           reduce using rule 33 (expresion -> terminal .)
    IS              reduce using rule 33 (expresion -> terminal .)
    ISNOT           reduce using rule 33 (expresion -> terminal .)
    DIFERENTE       reduce using rule 33 (expresion -> terminal .)
    DISTINTO        reduce using rule 33 (expresion -> terminal .)
    IGUAL           reduce using rule 33 (expresion -> terminal .)
    IGUALA          reduce using rule 33 (expresion -> terminal .)
    PARENDER        reduce using rule 33 (expresion -> terminal .)
    OR              reduce using rule 33 (expresion -> terminal .)
    AND             reduce using rule 33 (expresion -> terminal .)


state 7

    (3) sentencia -> if_stc .

    $end            reduce using rule 3 (sentencia -> if_stc .)


state 8

    (8) expresionLogica -> PARENIZQ . expresiones OR expresiones PARENDER
    (9) expresionLogica -> PARENIZQ . expresiones AND expresiones PARENDER
    (29) expresionGrupo -> PARENIZQ . expresion PARENDER
    (11) expresiones -> . expresionRelacional
    (12) expresiones -> . expresion
    (25) expresion -> . expresion SUMA terminal
    (26) expresion -> . expresion RESTA terminal
    (27) expresion -> . expresion MULTIPLICACION terminal
    (28) expresion -> . expresion DIVISION terminal
    (33) expresion -> . terminal
    (13) expresionRelacional -> . expresion MAYORQUE terminal
    (14) expresionRelacional -> . expresion MENORQUE terminal
    (15) expresionRelacional -> . expresion MAYORIGUALQUE terminal
    (16) expresionRelacional -> . expresion MENORIGUALQUE terminal
    (17) expresionRelacional -> . expresion IN terminal
    (18) expresionRelacional -> . expresion NOTIN terminal
    (19) expresionRelacional -> . expresion IS terminal
    (20) expresionRelacional -> . expresion ISNOT terminal
    (21) expresionRelacional -> . expresion DIFERENTE terminal
    (22) expresionRelacional -> . expresion DISTINTO terminal
    (23) expresionRelacional -> . expresion IGUAL terminal
    (24) expresionRelacional -> . expresion IGUALA terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    expresion                      shift and go to state 19
    terminal                       shift and go to state 6
    expresiones                    shift and go to state 17
    expresionRelacional            shift and go to state 16

state 9

    (1) sentencia -> IDENTIFICADOR . IGUAL expresion
    (35) terminal -> IDENTIFICADOR .

    IGUAL           shift and go to state 20
    SUMA            reduce using rule 35 (terminal -> IDENTIFICADOR .)
    RESTA           reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MULTIPLICACION  reduce using rule 35 (terminal -> IDENTIFICADOR .)
    DIVISION        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MAYORQUE        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MENORQUE        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MAYORIGUALQUE   reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MENORIGUALQUE   reduce using rule 35 (terminal -> IDENTIFICADOR .)
    IN              reduce using rule 35 (terminal -> IDENTIFICADOR .)
    NOTIN           reduce using rule 35 (terminal -> IDENTIFICADOR .)
    IS              reduce using rule 35 (terminal -> IDENTIFICADOR .)
    ISNOT           reduce using rule 35 (terminal -> IDENTIFICADOR .)
    DIFERENTE       reduce using rule 35 (terminal -> IDENTIFICADOR .)
    DISTINTO        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    IGUALA          reduce using rule 35 (terminal -> IDENTIFICADOR .)
    $end            reduce using rule 35 (terminal -> IDENTIFICADOR .)

  ! IGUAL           [ reduce using rule 35 (terminal -> IDENTIFICADOR .) ]


state 10

    (34) terminal -> NUMERO .

    $end            reduce using rule 34 (terminal -> NUMERO .)
    OR              reduce using rule 34 (terminal -> NUMERO .)
    AND             reduce using rule 34 (terminal -> NUMERO .)
    PARENDER        reduce using rule 34 (terminal -> NUMERO .)
    SUMA            reduce using rule 34 (terminal -> NUMERO .)
    RESTA           reduce using rule 34 (terminal -> NUMERO .)
    MULTIPLICACION  reduce using rule 34 (terminal -> NUMERO .)
    DIVISION        reduce using rule 34 (terminal -> NUMERO .)
    MAYORQUE        reduce using rule 34 (terminal -> NUMERO .)
    MENORQUE        reduce using rule 34 (terminal -> NUMERO .)
    MAYORIGUALQUE   reduce using rule 34 (terminal -> NUMERO .)
    MENORIGUALQUE   reduce using rule 34 (terminal -> NUMERO .)
    IN              reduce using rule 34 (terminal -> NUMERO .)
    NOTIN           reduce using rule 34 (terminal -> NUMERO .)
    IS              reduce using rule 34 (terminal -> NUMERO .)
    ISNOT           reduce using rule 34 (terminal -> NUMERO .)
    DIFERENTE       reduce using rule 34 (terminal -> NUMERO .)
    DISTINTO        reduce using rule 34 (terminal -> NUMERO .)
    IGUAL           reduce using rule 34 (terminal -> NUMERO .)
    IGUALA          reduce using rule 34 (terminal -> NUMERO .)


state 11

    (31) if_stc -> IF . test PUNTOS
    (30) test -> . PARENIZQ expresionRelacional PARENDER

    PARENIZQ        shift and go to state 22

    test                           shift and go to state 21

state 12

    (2) sentencia -> expresion .
    (25) expresion -> expresion . SUMA terminal
    (26) expresion -> expresion . RESTA terminal
    (27) expresion -> expresion . MULTIPLICACION terminal
    (28) expresion -> expresion . DIVISION terminal
    (13) expresionRelacional -> expresion . MAYORQUE terminal
    (14) expresionRelacional -> expresion . MENORQUE terminal
    (15) expresionRelacional -> expresion . MAYORIGUALQUE terminal
    (16) expresionRelacional -> expresion . MENORIGUALQUE terminal
    (17) expresionRelacional -> expresion . IN terminal
    (18) expresionRelacional -> expresion . NOTIN terminal
    (19) expresionRelacional -> expresion . IS terminal
    (20) expresionRelacional -> expresion . ISNOT terminal
    (21) expresionRelacional -> expresion . DIFERENTE terminal
    (22) expresionRelacional -> expresion . DISTINTO terminal
    (23) expresionRelacional -> expresion . IGUAL terminal
    (24) expresionRelacional -> expresion . IGUALA terminal

    $end            reduce using rule 2 (sentencia -> expresion .)
    SUMA            shift and go to state 38
    RESTA           shift and go to state 36
    MULTIPLICACION  shift and go to state 32
    DIVISION        shift and go to state 23
    MAYORQUE        shift and go to state 34
    MENORQUE        shift and go to state 33
    MAYORIGUALQUE   shift and go to state 27
    MENORIGUALQUE   shift and go to state 30
    IN              shift and go to state 29
    NOTIN           shift and go to state 24
    IS              shift and go to state 28
    ISNOT           shift and go to state 25
    DIFERENTE       shift and go to state 31
    DISTINTO        shift and go to state 26
    IGUAL           shift and go to state 37
    IGUALA          shift and go to state 35


state 13

    (7) sentencia -> expresionGrupo .

    $end            reduce using rule 7 (sentencia -> expresionGrupo .)


state 14

    (10) expresionLogica -> NOT . PARENIZQ expresiones PARENDER

    PARENIZQ        shift and go to state 39


state 15

    (32) print_stc -> PRINT PARENIZQ . STRING PARENDER

    STRING          shift and go to state 40


state 16

    (11) expresiones -> expresionRelacional .

    PARENDER        reduce using rule 11 (expresiones -> expresionRelacional .)
    OR              reduce using rule 11 (expresiones -> expresionRelacional .)
    AND             reduce using rule 11 (expresiones -> expresionRelacional .)


state 17

    (8) expresionLogica -> PARENIZQ expresiones . OR expresiones PARENDER
    (9) expresionLogica -> PARENIZQ expresiones . AND expresiones PARENDER

    OR              shift and go to state 42
    AND             shift and go to state 41


state 18

    (35) terminal -> IDENTIFICADOR .

    $end            reduce using rule 35 (terminal -> IDENTIFICADOR .)
    OR              reduce using rule 35 (terminal -> IDENTIFICADOR .)
    AND             reduce using rule 35 (terminal -> IDENTIFICADOR .)
    PARENDER        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    SUMA            reduce using rule 35 (terminal -> IDENTIFICADOR .)
    RESTA           reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MULTIPLICACION  reduce using rule 35 (terminal -> IDENTIFICADOR .)
    DIVISION        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MAYORQUE        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MENORQUE        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MAYORIGUALQUE   reduce using rule 35 (terminal -> IDENTIFICADOR .)
    MENORIGUALQUE   reduce using rule 35 (terminal -> IDENTIFICADOR .)
    IN              reduce using rule 35 (terminal -> IDENTIFICADOR .)
    NOTIN           reduce using rule 35 (terminal -> IDENTIFICADOR .)
    IS              reduce using rule 35 (terminal -> IDENTIFICADOR .)
    ISNOT           reduce using rule 35 (terminal -> IDENTIFICADOR .)
    DIFERENTE       reduce using rule 35 (terminal -> IDENTIFICADOR .)
    DISTINTO        reduce using rule 35 (terminal -> IDENTIFICADOR .)
    IGUAL           reduce using rule 35 (terminal -> IDENTIFICADOR .)
    IGUALA          reduce using rule 35 (terminal -> IDENTIFICADOR .)


state 19

    (29) expresionGrupo -> PARENIZQ expresion . PARENDER
    (12) expresiones -> expresion .
    (25) expresion -> expresion . SUMA terminal
    (26) expresion -> expresion . RESTA terminal
    (27) expresion -> expresion . MULTIPLICACION terminal
    (28) expresion -> expresion . DIVISION terminal
    (13) expresionRelacional -> expresion . MAYORQUE terminal
    (14) expresionRelacional -> expresion . MENORQUE terminal
    (15) expresionRelacional -> expresion . MAYORIGUALQUE terminal
    (16) expresionRelacional -> expresion . MENORIGUALQUE terminal
    (17) expresionRelacional -> expresion . IN terminal
    (18) expresionRelacional -> expresion . NOTIN terminal
    (19) expresionRelacional -> expresion . IS terminal
    (20) expresionRelacional -> expresion . ISNOT terminal
    (21) expresionRelacional -> expresion . DIFERENTE terminal
    (22) expresionRelacional -> expresion . DISTINTO terminal
    (23) expresionRelacional -> expresion . IGUAL terminal
    (24) expresionRelacional -> expresion . IGUALA terminal

    PARENDER        shift and go to state 43
    OR              reduce using rule 12 (expresiones -> expresion .)
    AND             reduce using rule 12 (expresiones -> expresion .)
    SUMA            shift and go to state 38
    RESTA           shift and go to state 36
    MULTIPLICACION  shift and go to state 32
    DIVISION        shift and go to state 23
    MAYORQUE        shift and go to state 34
    MENORQUE        shift and go to state 33
    MAYORIGUALQUE   shift and go to state 27
    MENORIGUALQUE   shift and go to state 30
    IN              shift and go to state 29
    NOTIN           shift and go to state 24
    IS              shift and go to state 28
    ISNOT           shift and go to state 25
    DIFERENTE       shift and go to state 31
    DISTINTO        shift and go to state 26
    IGUAL           shift and go to state 37
    IGUALA          shift and go to state 35


state 20

    (1) sentencia -> IDENTIFICADOR IGUAL . expresion
    (25) expresion -> . expresion SUMA terminal
    (26) expresion -> . expresion RESTA terminal
    (27) expresion -> . expresion MULTIPLICACION terminal
    (28) expresion -> . expresion DIVISION terminal
    (33) expresion -> . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    expresion                      shift and go to state 44
    terminal                       shift and go to state 6

state 21

    (31) if_stc -> IF test . PUNTOS

    PUNTOS          shift and go to state 45


state 22

    (30) test -> PARENIZQ . expresionRelacional PARENDER
    (13) expresionRelacional -> . expresion MAYORQUE terminal
    (14) expresionRelacional -> . expresion MENORQUE terminal
    (15) expresionRelacional -> . expresion MAYORIGUALQUE terminal
    (16) expresionRelacional -> . expresion MENORIGUALQUE terminal
    (17) expresionRelacional -> . expresion IN terminal
    (18) expresionRelacional -> . expresion NOTIN terminal
    (19) expresionRelacional -> . expresion IS terminal
    (20) expresionRelacional -> . expresion ISNOT terminal
    (21) expresionRelacional -> . expresion DIFERENTE terminal
    (22) expresionRelacional -> . expresion DISTINTO terminal
    (23) expresionRelacional -> . expresion IGUAL terminal
    (24) expresionRelacional -> . expresion IGUALA terminal
    (25) expresion -> . expresion SUMA terminal
    (26) expresion -> . expresion RESTA terminal
    (27) expresion -> . expresion MULTIPLICACION terminal
    (28) expresion -> . expresion DIVISION terminal
    (33) expresion -> . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    expresion                      shift and go to state 47
    terminal                       shift and go to state 6
    expresionRelacional            shift and go to state 46

state 23

    (28) expresion -> expresion DIVISION . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 48

state 24

    (18) expresionRelacional -> expresion NOTIN . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 49

state 25

    (20) expresionRelacional -> expresion ISNOT . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 50

state 26

    (22) expresionRelacional -> expresion DISTINTO . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 51

state 27

    (15) expresionRelacional -> expresion MAYORIGUALQUE . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 52

state 28

    (19) expresionRelacional -> expresion IS . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 53

state 29

    (17) expresionRelacional -> expresion IN . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 54

state 30

    (16) expresionRelacional -> expresion MENORIGUALQUE . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 55

state 31

    (21) expresionRelacional -> expresion DIFERENTE . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 56

state 32

    (27) expresion -> expresion MULTIPLICACION . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 57

state 33

    (14) expresionRelacional -> expresion MENORQUE . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 58

state 34

    (13) expresionRelacional -> expresion MAYORQUE . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 59

state 35

    (24) expresionRelacional -> expresion IGUALA . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 60

state 36

    (26) expresion -> expresion RESTA . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 61

state 37

    (23) expresionRelacional -> expresion IGUAL . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 62

state 38

    (25) expresion -> expresion SUMA . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    terminal                       shift and go to state 63

state 39

    (10) expresionLogica -> NOT PARENIZQ . expresiones PARENDER
    (11) expresiones -> . expresionRelacional
    (12) expresiones -> . expresion
    (13) expresionRelacional -> . expresion MAYORQUE terminal
    (14) expresionRelacional -> . expresion MENORQUE terminal
    (15) expresionRelacional -> . expresion MAYORIGUALQUE terminal
    (16) expresionRelacional -> . expresion MENORIGUALQUE terminal
    (17) expresionRelacional -> . expresion IN terminal
    (18) expresionRelacional -> . expresion NOTIN terminal
    (19) expresionRelacional -> . expresion IS terminal
    (20) expresionRelacional -> . expresion ISNOT terminal
    (21) expresionRelacional -> . expresion DIFERENTE terminal
    (22) expresionRelacional -> . expresion DISTINTO terminal
    (23) expresionRelacional -> . expresion IGUAL terminal
    (24) expresionRelacional -> . expresion IGUALA terminal
    (25) expresion -> . expresion SUMA terminal
    (26) expresion -> . expresion RESTA terminal
    (27) expresion -> . expresion MULTIPLICACION terminal
    (28) expresion -> . expresion DIVISION terminal
    (33) expresion -> . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    expresion                      shift and go to state 65
    terminal                       shift and go to state 6
    expresiones                    shift and go to state 64
    expresionRelacional            shift and go to state 16

state 40

    (32) print_stc -> PRINT PARENIZQ STRING . PARENDER

    PARENDER        shift and go to state 66


state 41

    (9) expresionLogica -> PARENIZQ expresiones AND . expresiones PARENDER
    (11) expresiones -> . expresionRelacional
    (12) expresiones -> . expresion
    (13) expresionRelacional -> . expresion MAYORQUE terminal
    (14) expresionRelacional -> . expresion MENORQUE terminal
    (15) expresionRelacional -> . expresion MAYORIGUALQUE terminal
    (16) expresionRelacional -> . expresion MENORIGUALQUE terminal
    (17) expresionRelacional -> . expresion IN terminal
    (18) expresionRelacional -> . expresion NOTIN terminal
    (19) expresionRelacional -> . expresion IS terminal
    (20) expresionRelacional -> . expresion ISNOT terminal
    (21) expresionRelacional -> . expresion DIFERENTE terminal
    (22) expresionRelacional -> . expresion DISTINTO terminal
    (23) expresionRelacional -> . expresion IGUAL terminal
    (24) expresionRelacional -> . expresion IGUALA terminal
    (25) expresion -> . expresion SUMA terminal
    (26) expresion -> . expresion RESTA terminal
    (27) expresion -> . expresion MULTIPLICACION terminal
    (28) expresion -> . expresion DIVISION terminal
    (33) expresion -> . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    expresion                      shift and go to state 65
    terminal                       shift and go to state 6
    expresiones                    shift and go to state 67
    expresionRelacional            shift and go to state 16

state 42

    (8) expresionLogica -> PARENIZQ expresiones OR . expresiones PARENDER
    (11) expresiones -> . expresionRelacional
    (12) expresiones -> . expresion
    (13) expresionRelacional -> . expresion MAYORQUE terminal
    (14) expresionRelacional -> . expresion MENORQUE terminal
    (15) expresionRelacional -> . expresion MAYORIGUALQUE terminal
    (16) expresionRelacional -> . expresion MENORIGUALQUE terminal
    (17) expresionRelacional -> . expresion IN terminal
    (18) expresionRelacional -> . expresion NOTIN terminal
    (19) expresionRelacional -> . expresion IS terminal
    (20) expresionRelacional -> . expresion ISNOT terminal
    (21) expresionRelacional -> . expresion DIFERENTE terminal
    (22) expresionRelacional -> . expresion DISTINTO terminal
    (23) expresionRelacional -> . expresion IGUAL terminal
    (24) expresionRelacional -> . expresion IGUALA terminal
    (25) expresion -> . expresion SUMA terminal
    (26) expresion -> . expresion RESTA terminal
    (27) expresion -> . expresion MULTIPLICACION terminal
    (28) expresion -> . expresion DIVISION terminal
    (33) expresion -> . terminal
    (34) terminal -> . NUMERO
    (35) terminal -> . IDENTIFICADOR

    NUMERO          shift and go to state 10
    IDENTIFICADOR   shift and go to state 18

    expresion                      shift and go to state 65
    terminal                       shift and go to state 6
    expresiones                    shift and go to state 68
    expresionRelacional            shift and go to state 16

state 43

    (29) expresionGrupo -> PARENIZQ expresion PARENDER .

    $end            reduce using rule 29 (expresionGrupo -> PARENIZQ expresion PARENDER .)


state 44

    (1) sentencia -> IDENTIFICADOR IGUAL expresion .
    (25) expresion -> expresion . SUMA terminal
    (26) expresion -> expresion . RESTA terminal
    (27) expresion -> expresion . MULTIPLICACION terminal
    (28) expresion -> expresion . DIVISION terminal

    $end            reduce using rule 1 (sentencia -> IDENTIFICADOR IGUAL expresion .)
    SUMA            shift and go to state 38
    RESTA           shift and go to state 36
    MULTIPLICACION  shift and go to state 32
    DIVISION        shift and go to state 23


state 45

    (31) if_stc -> IF test PUNTOS .

    $end            reduce using rule 31 (if_stc -> IF test PUNTOS .)


state 46

    (30) test -> PARENIZQ expresionRelacional . PARENDER

    PARENDER        shift and go to state 69


state 47

    (13) expresionRelacional -> expresion . MAYORQUE terminal
    (14) expresionRelacional -> expresion . MENORQUE terminal
    (15) expresionRelacional -> expresion . MAYORIGUALQUE terminal
    (16) expresionRelacional -> expresion . MENORIGUALQUE terminal
    (17) expresionRelacional -> expresion . IN terminal
    (18) expresionRelacional -> expresion . NOTIN terminal
    (19) expresionRelacional -> expresion . IS terminal
    (20) expresionRelacional -> expresion . ISNOT terminal
    (21) expresionRelacional -> expresion . DIFERENTE terminal
    (22) expresionRelacional -> expresion . DISTINTO terminal
    (23) expresionRelacional -> expresion . IGUAL terminal
    (24) expresionRelacional -> expresion . IGUALA terminal
    (25) expresion -> expresion . SUMA terminal
    (26) expresion -> expresion . RESTA terminal
    (27) expresion -> expresion . MULTIPLICACION terminal
    (28) expresion -> expresion . DIVISION terminal

    MAYORQUE        shift and go to state 34
    MENORQUE        shift and go to state 33
    MAYORIGUALQUE   shift and go to state 27
    MENORIGUALQUE   shift and go to state 30
    IN              shift and go to state 29
    NOTIN           shift and go to state 24
    IS              shift and go to state 28
    ISNOT           shift and go to state 25
    DIFERENTE       shift and go to state 31
    DISTINTO        shift and go to state 26
    IGUAL           shift and go to state 37
    IGUALA          shift and go to state 35
    SUMA            shift and go to state 38
    RESTA           shift and go to state 36
    MULTIPLICACION  shift and go to state 32
    DIVISION        shift and go to state 23


state 48

    (28) expresion -> expresion DIVISION terminal .
